Marketplace to use new create site api. v1 cleanup